--- a/app/src/main/res/layout/row_todo_item.xml
+++ b/app/src/main/res/layout/row_todo_item.xml
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/description"
+        android:id="@+id/descriptionEdit"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:text=""
