--- a/app/src/main/res/layout/edit_activity.xml
+++ b/app/src/main/res/layout/edit_activity.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+
     android:layout_height="match_parent">
 
     <EditText
@@ -11,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="648dp"
         android:layout_marginBottom="4dp"
+        android:gravity="start|top"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/aboutLayout"
         app:layout_constraintEnd_toEndOf="parent"
@@ -34,27 +36,33 @@
             android:id="@+id/checkBoxEdit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_marginLeft="40dp"
+            app:layout_constraintBottom_toBottomOf="@id/aboutLayout"
+            app:layout_constraintEnd_toStartOf="@id/timeCreation"
+            app:layout_constraintStart_toStartOf="@id/aboutLayout"
+            app:layout_constraintTop_toTopOf="@id/aboutLayout"
+            app:layout_constraintVertical_bias="0.823" />
 
         <TextView
             android:id="@+id/timeCreation"
-            android:layout_width="356dp"
+            android:layout_width="250dp"
             android:layout_height="32dp"
+            android:gravity="left"
+
             android:text=""
             app:layout_constraintBottom_toTopOf="@id/lastModify"
+            app:layout_constraintEnd_toEndOf="@id/aboutLayout"
             app:layout_constraintStart_toEndOf="@id/checkBoxEdit"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:layout_editor_absoluteX="52dp"
-            tools:layout_editor_absoluteY="17dp" />
+            app:layout_constraintTop_toTopOf="@id/aboutLayout" />
 
         <TextView
             android:id="@+id/lastModify"
-            android:layout_width="356dp"
+            android:layout_width="250dp"
             android:layout_height="32dp"
+            android:gravity="left"
             android:text=""
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/aboutLayout"
+            app:layout_constraintEnd_toEndOf="@id/aboutLayout"
             app:layout_constraintStart_toEndOf="@id/checkBoxEdit"
             app:layout_constraintTop_toBottomOf="@id/timeCreation" />
     </androidx.constraintlayout.widget.ConstraintLayout>
