--- a/app/src/main/res/layout/edit_activity.xml
+++ b/app/src/main/res/layout/edit_activity.xml
@@ -10,10 +10,9 @@
     <EditText
         android:id="@+id/descriptionEdit"
         android:layout_width="match_parent"
-        android:layout_height="648dp"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="4dp"
         android:gravity="start|top"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/aboutLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -24,9 +23,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/aboutLayout"
         android:layout_width="match_parent"
-        android:layout_height="82dp"
+        android:layout_height="wrap_content"
         android:background="#CD73F3CA"
-        app:layout_constraintBottom_toTopOf="@id/descriptionEdit"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,8 +45,7 @@
             android:id="@+id/timeCreation"
             android:layout_width="250dp"
             android:layout_height="32dp"
-            android:gravity="left"
-
+            android:gravity="start"
             android:text=""
             app:layout_constraintBottom_toTopOf="@id/lastModify"
             app:layout_constraintEnd_toEndOf="@id/aboutLayout"
@@ -59,7 +56,7 @@
             android:id="@+id/lastModify"
             android:layout_width="250dp"
             android:layout_height="32dp"
-            android:gravity="left"
+            android:gravity="start"
             android:text=""
             app:layout_constraintBottom_toBottomOf="@id/aboutLayout"
             app:layout_constraintEnd_toEndOf="@id/aboutLayout"
